<resources>
    <string name="app_name">PastilleroDigital</string>
    <string name="pastillero">Pastillero</string>
    <string name="p">P</string>
    <string name="pastillero_digital">Pastillero Digital</string>
    <string name="option_morning">Mañana</string>
    <string name="option_afternoon">Tarde</string>
    <string name="option_night">Noche</string>
    <string name="medicamentos">Medicamentos</string>
    <string name="medicament_name">Nombre Medicamento</string>
    <string name="time_take">Hora de toma</string>
    <string name="amount">Dosis</string>
    <string name="medicament_title">Medicamento</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>
    <string name="horario">Horario</string>
    <string name="medicament_time">Duración</string>
    <string name="delete">Eliminar</string>
    <string name="add_alert">Añadir alerta</string>
    <string name="alarma_title">Alarma</string>
    <string name="alert_name">Nombre</string>
    <string name="alert_time">Hora</string>
    <string name="add">Guardar</string>
    <string name="family_title">Familia</string>
    <string name="family_name">Nombre</string>
    <string name="family_phone">Teléfono</string>
    <string name="family_relation">Relación</string>
    <string name="add_family">Añadir Familiar</string>
    <string name="register_cita">Registrar Cita</string>
    <string name="cita_medic">Médico</string>
    <string name="cita_location">Localización</string>
    <string name="cita_time">Hora</string>
    <string name="cita_date">Fecha</string>
    <string name="cita_companion">Acompañante</string>
    <string name="cita_description">Descripción</string>
    <string name="citamedica_title">Cita Medica</string>
    <string name="history_title">Historial de citas</string>
    <string name="new_profile">New Profile</string>
    <string name="profile_name">Nombre Perfil</string>
    <string name="permissions">Permisos</string>
    <string name="profile_add">Añadir Perfil</string>
    <string name="profile">Perfil</string>
    <string name="profile1">Profile1</string>
    <string name="profile2">Profile2</string>
    <string name="familiar">Familiar</string>
    <string name="historial">Historial</string>
    <string name="medication">Medicamentos</string>
    <string name="cita_medica">Cita Médica</string>
    <string name="alert_delete">Eliminar</string>
    <string name="delete_medicament">Eliminar</string>
    <string name="delete_family">Quitar</string>
    <string name="edit">Editar</string>
    <string name="current_user">Current user</string>
    <string name="log_out">Log out</string>
    <string name="user_email">email</string>
    <string name="user_password">Password</string>
    <string name="user_surname">Surname</string>
    <string name="user_nif">Nif</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_profile">Save Profile</string>
    <string name="agenda_citas">Agenda Cita Médica</string>
    <string name="register">Register</string>
    <string name="google">Google</string>
    <string name="login">Login</string>
    <string name="don_t_you_have_an_account_register">don´t you have an account? Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="ic_pastillero">Pastillero Digital</string>
    <string name="daily_pillbox">Pastillero diario</string>
    <string name="medicamento_descripcion">Descripción</string>
    <string name="agenda_medicamentos">Agenda Medicamentos</string>
</resources>