<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        app:itemIconTint="@color/nav_selector"
        app:itemTextColor="@color/nav_selector"
        app:labelVisibilityMode="labeled"/>
    <item
        android:id="@+id/medicament"
        android:icon="@drawable/ic_medication"
        android:title="@string/medicament_title" />

    <item
        android:id="@+id/alert"
        android:icon="@drawable/ic_alert"
        android:title="@string/alarma_title" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />


</menu>