<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/tvMorning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_morning" />

        <TextView
            android:id="@+id/tvAfternoon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_afternoon" />

        <TextView
            android:id="@+id/tvNight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/option_night" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>