<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.DetailsMedicamentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/grey_light"
            android:elevation="20dp"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_back"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/grey_light"/>


            <TextView
                android:id="@+id/tvDetailMedicament"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medicament_title"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold|italic"
                android:layout_weight="1"
                android:layout_margin="10dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="70dp">

            <ImageButton
                android:id="@+id/imgBtnMedicament"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvMedicamentName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medicament_name"
                android:textSize="30sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="50dp"/>


            <TextView
                android:id="@+id/tvMedicamentAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textSize="30sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="50dp"
                />

            <TextView
                android:id="@+id/tvMedicamentTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_take"
                android:textSize="30sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="50dp"
                />

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue_primary"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:text="@string/edit" />

            <Button
                android:id="@+id/btnAddAlert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue_primary"
                android:textSize="30sp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:text="@string/add_alert" />

            <Button
                android:id="@+id/btnDeleteMedicament"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:textSize="30sp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="50dp"
                android:layout_gravity="center"
                android:text="@string/delete_medicament" />

    </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>