<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:title="@string/citamedica_title"
        app:navigationIcon="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="16dp">
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_height="wrap_content"
                android:textColor="@color/blue_primary"
                android:textColorHint="@color/blue_primary"
                android:layout_width="match_parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDescription"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue_primary"
                    android:textColorHint="@color/blue_primary"
                    android:textSize="40sp"
                    android:layout_width="match_parent"
                    android:hint="@string/cita_description"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:textColor="@color/blue_primary"
                android:textColorHint="@color/blue_primary"
                android:layout_width="match_parent"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCompanion"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue_primary"
                    android:textColorHint="@color/blue_primary"
                    android:textSize="40sp"
                    android:layout_width="match_parent"
                    android:hint="@string/cita_companion"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/blue_primary"
                android:textColorHint="@color/blue_primary"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etDate"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textColor="@color/blue_primary"
                    android:textColorHint="@color/blue_primary"
                    android:textSize="40sp"
                    android:focusable="false"
                    android:clickable="true"
                    android:hint="@string/cita_date"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/blue_primary"
                android:textColorHint="@color/blue_primary"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTime"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textColor="@color/blue_primary"
                    android:textColorHint="@color/blue_primary"
                    android:textSize="40sp"
                    android:focusable="false"
                    android:clickable="true"
                    android:hint="@string/cita_time"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/blue_primary"
                android:textColorHint="@color/blue_primary"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLocation"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue_primary"
                    android:textColorHint="@color/blue_primary"
                    android:textSize="40sp"
                    android:layout_width="match_parent"
                    android:hint="@string/cita_location"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/blue_primary"
                android:textColorHint="@color/blue_primary"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMedic"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:textColor="@color/blue_primary"
                    android:textColorHint="@color/blue_primary"
                    android:textSize="40sp"
                    android:hint="@string/cita_medic"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_cita"
                android:textSize="40sp"
                android:layout_margin="20dp"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>