<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activities.DetailsAlertaActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/grey_light"
            android:elevation="20dp"
            android:paddingBottom="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageButton
                android:id="@+id/imgBtnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_back"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/grey_light"/>


            <TextView
                android:id="@+id/tvAddAlertTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alarma_title"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold|italic"
                android:layout_weight="1"
                android:layout_margin="10dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="70dp">

            <TextView
                android:id="@+id/tvAlarmTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alert_time"
                android:textSize="30sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                />

            <ImageButton
                android:id="@+id/imgBtnAlarma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tvMedicamentName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alert_name"
                android:textSize="30sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"/>

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/blue_primary"
                android:textSize="30sp"
                android:layout_gravity="center"
                android:text="@string/edit" />

            <ImageButton
                android:id="@+id/imgBtnCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_check"
                android:layout_gravity="center"
                android:padding="20dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/blue_primary"/>

            <Button
                android:id="@+id/btnDeleteAlert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red"
                android:textSize="30sp"
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:text="@string/alert_delete" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>